--- a/src/App.css
+++ b/src/App.css
@@ -229,7 +229,7 @@ header.scrolled .menu {
   z-index: 0;
   background-size: cover;
   width: 100%;
-  margin-top: -90px;
+  margin-top: -100px;
   top: 13%;
 }
 
@@ -1336,14 +1336,14 @@ strong {
     font-size: 6rem;
   }
 } */
-form {
+.form {
   display: grid;
   grid-template-columns: 1fr;
   gap: 1.5rem 1.5rem;
   max-width: 100%;
 }
 @media (min-width: 640px) {
-  form {
+  .form {
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -1484,7 +1484,7 @@ form {
   margin-bottom: 16px;
 }
 
-.logo {
+.flogo {
   width: 60px;
   height: 60px;
   object-fit: contain;
@@ -1494,6 +1494,7 @@ form {
   color: #5a7a6a;
   text-decoration: none;
   margin-left: 12px;
+  margin-right: 5px;
   font-size: 14px;
   display: inline-block;
   vertical-align: middle;
